--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,11 @@ ul.main_nav li:hover ul.sub_music_menu {
 	display: block; 
 	font-family: 'Permanent Marker', cursive;
 }
+
+.top_photo_border {
+	width: 100%;
+	height: 50px;
+	background-color: black;
+	border-top: 4px #990000 solid; 
+	border-bottom: 4px #990000 solid;
+}
