--- a/css/style.css
+++ b/css/style.css
@@ -63,3 +63,18 @@ ul.main_nav li:hover ul.sub_music_menu {
 	border-top: 4px #990000 solid; 
 	border-bottom: 4px #990000 solid;
 }
+
+.index_image {
+	width: 100%;
+	height: 15em;
+}
+
+.bottom_photo_border {
+	width: 100%;
+	height: 50px;
+	background-color: black;
+	border-top: 4px #990000 solid; 
+	border-bottom: 4px #990000 solid;
+}
+
+
