--- a/css/style.css
+++ b/css/style.css
@@ -77,4 +77,26 @@ ul.main_nav li:hover ul.sub_music_menu {
 	border-bottom: 4px #990000 solid;
 }
 
+.site_links_row {
+	display: block;
+	width: 100%;
+	height: 15em;
+}
 
+.site_links_credit {
+	display: inline-block;
+	width: 25%;
+	margin-left: 110px;
+}
+
+.site_links_listen_to_tracks {
+	display: inline-block;
+	width: 25%;
+	margin-left: 23px;
+}
+
+.site_links_contact {
+	display: inline-block;
+	width: 25%;
+	margin-left: 23px; 
+}
