--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ ul.main_nav li:hover ul.sub_music_menu {
 	display: block;
 	width: 100%;
 	height: 15em;
+	background-color: #d69871;
 }
 
 .site_links_credit {
@@ -119,13 +120,23 @@ ul.main_nav li:hover ul.sub_music_menu {
 	border-radius: 4px black solid;
 }
 
+.site_footer {
+	background-color: #d69871;
+	height: 75px;
+}
+
 .wordpress_text, .footer_text_right {
 	display: inline-block;
+	color: white;
 }
 
 .wordpress_text {
 	width: 49%;
 	float: left;
+}
+
+.wordpress_text p {
+	margin-left: 25px; 
 }
 
 .footer_text_right {
@@ -135,4 +146,5 @@ ul.main_nav li:hover ul.sub_music_menu {
 
 .footer_text_right p {
 	display: inline-block;
+	margin-left: 75px; 
 }
