--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,6 @@ body {
 	height: 200px;
 }
 
-/* css for hamburger menu */
-
-.hamburger {
-	display: none;
-}
 
 /* css for navigation menu */
 
@@ -48,6 +43,7 @@ ul.main_nav a {
 }
 
 
+
 /*css for submusic menu*/
 
 ul.sub_music_menu {
@@ -70,6 +66,13 @@ ul.sub_music_menu li {
 
 ul.main_nav li:hover ul.sub_music_menu {
 	display: block;
+}
+
+/*css for 700px banner*/
+
+
+ul.banner_700px {
+	display: none;
 }
 
 /*css for main header and logo */
@@ -226,6 +229,23 @@ ul.main_nav li:hover ul.sub_music_menu {
 	ul.main_nav {
 		display: none; 
 	}
+
+	ul.banner_700px {
+		border-top: 4px #990000 solid; 
+		border-bottom: 4px #990000 solid; 
+		display: block;
+		width: 100%;
+		height: 25px;
+		background-color: black; 
+	}
+
+	ul.banner_700px li {
+		display: inline-block;
+		color: white;
+		text-align: center; 
+	}
+
+
 
 
 }
