--- a/css/style.css
+++ b/css/style.css
@@ -68,11 +68,15 @@ ul.main_nav li:hover ul.sub_music_menu {
 	display: block;
 }
 
-/*css for 700px banner*/
+/*css for 700px menu and banner*/
 
 
 ul.banner_700px {
 	display: none;
+}
+
+ul.menu_700px {
+	display: none; 
 }
 
 /*css for main header and logo */
@@ -226,6 +230,10 @@ ul.banner_700px {
 		margin-top: -12px; 
 	}
 
+	.main_header{
+		height: 500px;
+	}
+
 	ul.main_nav {
 		display: none; 
 	}
@@ -240,7 +248,7 @@ ul.banner_700px {
 	}
 
 	ul.banner_700px li {
-		display: inline-block;
+		display: block;
 		color: white;
 		width: 100%;
 		text-align: center; 
@@ -250,8 +258,29 @@ ul.banner_700px {
 		color: gold;
 	}
 
+	ul.menu_700px {
+		border-top: 4px #990000 solid; 
+		border-bottom: 4px #990000 solid; 
+		display: block;
+		width: 100%;
+		height: 200px;
+		background-color: black; 
+	}
+	
+	ul.menu_700px li {
+		display: block;
+		color: white;
+		width: 100%;
+		text-align: center; 
+	}
 
+	ul.menu_700px li:hover {
+		color: gold;
+	}
 
+	.header_logo{
+		position: absolute;
+	}
 
 }
 
