--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,7 @@ ul.menu_700px {
 	}
 
 	.main_header{
-		height: 500px;
+		height: 200px;
 	}
 
 	ul.main_nav {
@@ -261,7 +261,7 @@ ul.menu_700px {
 	ul.menu_700px {
 		border-top: 4px #990000 solid; 
 		border-bottom: 4px #990000 solid; 
-		display: block;
+		display: none;
 		width: 100%;
 		height: 200px;
 		background-color: black; 
