--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,10 @@ ul.menu_700px {
 	border-radius: 4px black solid;
 }
 
+.site_links_list {
+	display: none;
+}
+
 .site_footer_950px {
 	display: none;
 }
@@ -272,6 +276,7 @@ ul.menu_700px {
 		color: white;
 		width: 100%;
 		text-align: center; 
+		padding-top: 6px;
 	}
 
 	ul.menu_700px li:hover {
@@ -280,6 +285,28 @@ ul.menu_700px {
 
 	.header_logo{
 		position: absolute;
+	}
+
+}
+
+@media screen and (max-width : 675px) {
+
+	.site_links_list {
+		display: block;
+		list-style: none;
+		width: 100%;
+		height: 10em;
+		background-color: #d69871;
+		font-weight: bold; 
+		
+	}
+
+	.site_links_list li {
+		padding: 20px 0px 0px 15px; 
+	}
+
+	.site_links_row {
+		display: none; 
 	}
 
 }
