--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ ul.main_nav li {
 }
 
 ul.main_nav li:hover {
-	background-color: #990000;
+	background-color: #DD4E55;
 }
 
 ul.main_nav a {
@@ -70,13 +70,17 @@ ul.sub_music_menu {
 	
 }
 
-ul.sub_music_menu:hover, ul.sub_music_menu a {
-	background-color: #990000;
+ul.sub_music_menu:hover {
+	background-color: #DD4E55;
 }
 
 ul.sub_music_menu li {
 	display: block;
 	text-align: left;
+	background-color: #DD4E55;
+}
+
+ul.sub_music_menu li:hover {
 	background-color: #990000;
 }
 
@@ -111,7 +115,7 @@ ul.menu_700px {
 /*css for top border*/
 
 .top_photo_border {
-	border: 4px #990000 solid; 
+	border: 4px #DD4E55 solid; 
 }
 
 /*css for image*/
@@ -147,14 +151,14 @@ ul.menu_700px {
 /*css for bottom photo border*/
 
 .bottom_photo_border {
-	border: 4px #990000 solid; 
+	border: 4px #DD4E55 solid; 
 }
 
 /*special z-index for bio page*/
 .bottom_photo_border_bio {
 	z-index: 2;
 	position: relative;
-	border: 4px #990000 solid; 
+	border: 4px #DD4E55 solid; 
 }
 
 .site_links_row_bio {
@@ -333,8 +337,8 @@ ul.menu_700px {
 	}
 
 	ul.banner_700px {
-		border-top: 4px #990000 solid; 
-		border-bottom: 4px #990000 solid; 
+		border-top: 4px #DD4E55 solid; 
+		border-bottom: 4px #DD4E55 solid; 
 		display: block;
 		width: 100%;
 		height: 25px;
@@ -353,8 +357,8 @@ ul.menu_700px {
 	}
 
 	ul.menu_700px {
-		border-top: 4px #990000 solid; 
-		border-bottom: 4px #990000 solid; 
+		border-top: 4px #DD4E55 solid; 
+		border-bottom: 4px #DD4E55 solid; 
 		display: none;
 		width: 100%;
 		height: 200px;
