--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,10 @@ ul.main_nav_music li:hover ul.sub_music_menu_music {
 	display: block;
 }
 
+li.active {
+	border-bottom: 1px solid black; 
+}
+
 
 /*css for submusic menu*/
 
