--- a/css/style.css
+++ b/css/style.css
@@ -203,13 +203,28 @@ ul.menu_700px {
 
 }
 
-@media screen and (max-width : 700px) {
+@media screen and (max-width : 725px) {
+
+	html {
+		margin-top: -12px; 
+	}
+
+	.main_header{
+		height: 200px;
+	}
+
+	ul.main_nav {
+		display: none; 
+	}
+
+	.header_logo{
+	position: absolute;
+	}
 
 	ul.banner_700px {
 		border-top: 4px #DD4E55 solid; 
 		border-bottom: 4px #DD4E55 solid; 
 		display: block;
-		width: 100%;
 		height: 25px;
 		background-color: black; 
 	}
